<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/QuestionBaseLayout">

    <TextView
        android:id="@+id/question_title"
        style="@style/QuestionTitle"
        android:text="@string/title_question_2"/>

    <TextView
        android:id="@+id/question_text"
        style="@style/Question"
        android:text="@string/question_2"/>

    <LinearLayout
        style="@style/CheckboxAnswersBaseLayout">


        <LinearLayout
            style="@style/CheckboxAnswersLayout">

            <CheckBox
                android:id="@+id/answer1"
                style="@style/RadioAnswer"
                android:text="@string/answer_2_1"/>

            <CheckBox
                android:id="@+id/answer4"
                style="@style/RadioAnswer"
                android:text="@string/answer_2_2"/>

            <CheckBox
                android:id="@+id/answer2"
                style="@style/RadioAnswer"
                android:text="@string/answer_2_3"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CheckboxAnswersLayout">


            <CheckBox
                android:id="@+id/answer3"
                style="@style/RadioAnswer"
                android:text="@string/answer_2_4"/>


            <CheckBox
                android:id="@+id/answer5"
                style="@style/RadioAnswer"
                android:text="@string/answer_2_5"/>


            <CheckBox
                android:id="@+id/answer6"
                style="@style/RadioAnswer"
                android:text="@string/answer_2_6"/>


        </LinearLayout>


    </LinearLayout>

    <Button
        style="@style/NextButton"
        android:onClick="nextView"
        android:text="@string/next"/>

</RelativeLayout>